--- a/CarDealership/View/RegisterCarView.xaml
+++ b/CarDealership/View/RegisterCarView.xaml
@@ -13,12 +13,49 @@
     </Page.DataContext>
 
 
-    <Grid Background="#FFF38D8D" Margin="0,0,0,10">
 
+
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+                <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False" 
+               CompactPaneLength="50" OpenPaneLength="150">
+            <SplitView.DataContext>
+                <ViewModel:MenuViewModel/>
+            </SplitView.DataContext>
+            <!--The pane represents the menu that you want to be able to interact with, and the content represents the main content of your page.-->
+                    <SplitView.Pane>
+                        <StackPanel Background="#FF32BEA6">
+                            <Button x:Name="HamburgerButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
+                    Width="50" Height="50" Background="Transparent" Click="HamburgerButton_Click"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Button x:Name="Carss" FontFamily="Segoe MDL2 Assets" Content="&#xE825;"
+                    Width="50" Height="50" Background="Transparent" Command="{Binding ToRegisterCar,Mode=TwoWay}"/>
+                                <TextBlock Text="Cars" FontSize="18" VerticalAlignment="Center" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Button x:Name="MenuButton2" FontFamily="Segoe MDL2 Assets" Content="&#xE10F;"
+                        Width="50" Height="50" Background="Transparent" Command="{Binding ToInvoce,Mode=TwoWay}"/>
+                                <TextBlock Text="Invoice" FontSize="18" VerticalAlignment="Center" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Button x:Name="MenuButton3" FontFamily="Segoe MDL2 Assets" Content="&#xE1D6;"
+                        Width="50" Height="50" Background="Transparent"/>
+                                <TextBlock Text="Button 3" FontSize="18" VerticalAlignment="Center" />
+                            </StackPanel>
+                        </StackPanel>
+                    </SplitView.Pane>
+                    <SplitView.Content>
+                        <Grid>
+                            <TextBlock Text="SplitView Basic" FontSize="54" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </SplitView.Content>
+                </SplitView>
+         
 
         <ListView x:Name="CarList"
 			Height="600"
-			ItemsSource="{Binding CarCollection}" Margin="457,160,392,-50" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
+			ItemsSource="{Binding CarCollection}" Margin="395,126,454,-6" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" SelectionChanged="CarList_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Width="350"
@@ -65,7 +102,7 @@
         </ListView>
 
         <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
-        <StackPanel HorizontalAlignment="Left" Height="292" Margin="250,160,0,0" VerticalAlignment="Top" Width="187">
+        <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
             <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
             <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
             <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
@@ -73,16 +110,16 @@
             <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
             <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
             <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name"/>
-            <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150"/>
+            <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150" Background="#3332BEA6"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Height="112" Margin="936,247,0,0" VerticalAlignment="Top" Width="104">
 
-            <Button x:Name="button" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top"/>
+            <Button x:Name="button" Content="DeleteCar" HorizontalAlignment="Left" Command="{Binding DeleteCar,Mode=TwoWay}" VerticalAlignment="Top" Background="#3332BEA6"/>
             <Button x:Name="button2" Content="CreateInvoice" HorizontalAlignment="Stretch" Command="{Binding CreateInvoiceWithSelectedCar,Mode=TwoWay}" VerticalAlignment="Stretch"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
             <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
-            <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100"/>
+            <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100" Background="#3332BEA6"/>
         </StackPanel>
 
 
