--- a/CarDealership/View/InvoiceView.xaml
+++ b/CarDealership/View/InvoiceView.xaml
@@ -61,9 +61,9 @@
                 <Grid.DataContext>
                     <ViewModel:InvoiceViewModel/>
                 </Grid.DataContext>
-                <ListView x:Name="CustomerList" Width="350"
+                <ListView x:Name="CustomerList"
 			Height="600"
-			ItemsSource="{Binding CustomerCollection}" Margin="190,89,690,31" SelectedItem="{Binding selectedcustomer,Mode=TwoWay}">
+			ItemsSource="{Binding CustomerCollection}" Margin="185,80,777,40" SelectedItem="{Binding selectedcustomer,Mode=TwoWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Width="230"
@@ -101,10 +101,10 @@
                         Content="CreateInvoice" 
                         HorizontalAlignment="Left" 
                         Command="{Binding createInvoice}"
-                        Margin="993,66,0,0" 
+                        Margin="1079,585,0,0" 
                         VerticalAlignment="Top" 
                         Background="#32BEA6"/>
-                <StackPanel HorizontalAlignment="Left" Height="470" Margin="26,61,0,0" VerticalAlignment="Top" Width="164">
+                <StackPanel HorizontalAlignment="Left" Height="470" Margin="21,89,0,0" VerticalAlignment="Top" Width="164">
                     <TextBox Text="{Binding name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
                     <TextBox Text="{Binding age, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="age"/>
                     <TextBox Text="{Binding adress, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="adress"/>
@@ -119,7 +119,7 @@
                             Background="#32BEA6" Width="150"/>
                 </StackPanel>
                 <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="934,125,0,0" TextWrapping="Wrap" Text="{Binding invoicetext, Mode=TwoWay}" VerticalAlignment="Top" Height="460" Width="275" Foreground="Black"/>
-                <StackPanel HorizontalAlignment="Left" Height="628" Margin="508,20,0,0" Width="566" VerticalAlignment="Top">
+                <StackPanel HorizontalAlignment="Left" Height="628" Margin="453,29,0,0" Width="602" VerticalAlignment="Top">
                     <StackPanel HorizontalAlignment="Left" Height="32" Margin="20,0,0,0" VerticalAlignment="Top" Width="313" Orientation="Horizontal">
                         <TextBox PlaceholderText="Find Car" Width="200" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
                         <Button x:Name="SearchCar" 
@@ -133,7 +133,7 @@
                     </StackPanel>
                     <ListView x:Name="CarList"
             	Height="600"
-            	ItemsSource="{Binding CarCollection}" Margin="0,0,168,0" SelectedItem="{Binding selectedcar, Mode=TwoWay}" SelectedIndex="{Binding Selectedindex}" Header="" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
+            	ItemsSource="{Binding CarCollection}" Margin="0,0,212,0" SelectedItem="{Binding selectedcar, Mode=TwoWay}" SelectedIndex="{Binding Selectedindex}" Header="" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Width="350"
@@ -171,6 +171,7 @@
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
+                    <Button x:Name="button" Content="Button" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Left" Height="32" Margin="190,29,0,0" VerticalAlignment="Top" Width="313" Orientation="Horizontal">
                     <TextBox PlaceholderText="Find Customer" Width="170" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcustomer, Mode=TwoWay}"/>
@@ -183,6 +184,7 @@
                             Width="65" 
                             Background="#32BEA6"/>
                 </StackPanel>
+                <Button x:Name="button1" Content="Finalize sale" HorizontalAlignment="Left" Margin="1079,625,0,0" VerticalAlignment="Top"  Background="#32BEA6"/>
             </Grid>
         </SplitView>
 
