--- a/CarDealership/View/InvoiceView.xaml
+++ b/CarDealership/View/InvoiceView.xaml
@@ -63,7 +63,7 @@
                 </Grid.DataContext>
                 <ListView x:Name="CustomerList"
 			Height="600"
-			ItemsSource="{Binding CustomerCollection}" Margin="185,80,777,40" SelectedItem="{Binding selectedcustomer,Mode=TwoWay}">
+			ItemsSource="{Binding CustomerCollection}" Margin="217,162,727,-42" SelectedItem="{Binding selectedcustomer,Mode=TwoWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Width="230"
@@ -101,7 +101,7 @@
                         Content="Finalize Sale" 
                         HorizontalAlignment="Left" 
                         Command="{Binding createInvoice}"
-                        Margin="1079,585,0,0" 
+                        Margin="1007,537,0,0" 
                         VerticalAlignment="Top" 
                         Background="#32BEA6"/>
                 <StackPanel HorizontalAlignment="Left" Height="470" Margin="21,89,0,0" VerticalAlignment="Top" Width="164">
@@ -118,8 +118,8 @@
                             VerticalAlignment="Top " 
                             Background="#32BEA6" Width="150"/>
                 </StackPanel>
-                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="934,125,0,0" TextWrapping="Wrap" Text="{Binding invoicetext, Mode=TwoWay}" VerticalAlignment="Top" Height="460" Width="275" Foreground="Black"/>
-                <StackPanel HorizontalAlignment="Left" Height="628" Margin="453,29,0,0" Width="602" VerticalAlignment="Top">
+                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="916,109,0,0" TextWrapping="Wrap" Text="{Binding invoicetext, Mode=TwoWay}" VerticalAlignment="Top" Height="460" Width="275" Foreground="Black"/>
+                <StackPanel HorizontalAlignment="Center" Height="628" Margin="549,82,319,10" Width="362" VerticalAlignment="Center">
                     <StackPanel HorizontalAlignment="Left" Height="32" Margin="20,0,0,0" VerticalAlignment="Top" Width="313" Orientation="Horizontal">
                         <TextBox PlaceholderText="Find Car" Width="200" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
                         <Button x:Name="SearchCar" 
@@ -132,48 +132,46 @@
                                 Background="#32BEA6"/>
                     </StackPanel>
                     <ListView x:Name="CarList"
-            	Height="600"
-            	ItemsSource="{Binding CarCollection}" Margin="0,0,212,0" SelectedItem="{Binding selectedcar, Mode=TwoWay}" SelectedIndex="{Binding Selectedindex}" Header="" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True">
+                    	ItemsSource="{Binding CarCollection}" Margin="0,0,104,0" SelectedItem="{Binding selectedcar, Mode=TwoWay}" SelectedIndex="{Binding Selectedindex}" Header="" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" Height="587">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel Width="350"
+                                <StackPanel Width="220"
             				
-                            		Margin="5" Background="#32BEA6">
+                    				Margin="5" Background="#32BEA6">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="ID:" Width="50"/>
-                                        <TextBox Text="{Binding ID, Mode=TwoWay}" Width="275"/>
+                                        <TextBox Text="{Binding ID, Mode=TwoWay}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Name:" Width="50"/>
-                                        <TextBox Text="{Binding Name}" Width="275"/>
+                                        <TextBox Text="{Binding Name}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Brand:" Width="50"/>
-                                        <TextBox Text="{Binding Brand}" Width="275"/>
+                                        <TextBox Text="{Binding Brand}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Color:" Width="50"/>
-                                        <TextBox Text="{Binding Color}" Width="275"/>
+                                        <TextBox Text="{Binding Color}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Comment:" Width="50"/>
-                                        <TextBox Text="{Binding Comment}" Width="275"/>
+                                        <TextBox Text="{Binding Comment}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Year:" Width="50"/>
-                                        <TextBox Text="{Binding Year}" Width="275"/>
+                                        <TextBox Text="{Binding Year}" Width="150"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Price:" Width="50"/>
-                                        <TextBox Text="{Binding Price}" Width="275"/>
+                                        <TextBox Text="{Binding Price}" Width="150"/>
                                     </StackPanel>
                                 </StackPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-                    <Button x:Name="button" Content="Button" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                 </StackPanel>
-                <StackPanel HorizontalAlignment="Left" Height="32" Margin="190,29,0,0" VerticalAlignment="Top" Width="313" Orientation="Horizontal">
+                <StackPanel HorizontalAlignment="Left" Height="32" Margin="240,109,0,0" VerticalAlignment="Top" Width="313" Orientation="Horizontal">
                     <TextBox PlaceholderText="Find Customer" Width="170" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcustomer, Mode=TwoWay}"/>
                     <Button x:Name="SearchCustomer" 
                             Content="Search"
