--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -62,44 +62,42 @@
                 <ViewModel:RegisterCarViewModel/>
             </Grid.DataContext>
                 <ListView x:Name="CarList"
-			                Height="600"
-			                ItemsSource="{Binding CarCollection}" Margin="395,126,356,-6" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" >
+			Height="600"
+			ItemsSource="{Binding CarCollection}" Margin="395,126,356,-6" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Width="400"
-						                Background="#32BEA6"
-						                Margin="5">
+						Background="#32BEA6"
+						Margin="5">
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Background="#32BEA6" BorderThickness="0" Margin="5,5,5,4">
                                     <Image x:Name="image" Height="130" Margin="0,0,0,0" VerticalAlignment="Top" Width="130" Source="{Binding ImagePath,Mode=TwoWay}" NineGrid="0" />
                                     <StackPanel Orientation="Vertical" BorderBrush="Black" BorderThickness="0" Margin="10,0,0,0">
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="ID:" Width="70
-                                                       " HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                            <TextBlock Text="ID:" Width="50"/>
                                             <TextBox Text="{Binding ID}" Width="100"/>
                                         </StackPanel>
-                                        
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Brand:" Width="70" VerticalAlignment="Center"/>
+                                            <TextBlock Text="Name:" Width="50"/>
+                                            <TextBox Text="{Binding Name}" Width="150"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Brand:" Width="50"/>
                                             <TextBox Text="{Binding Brand}" Width="150"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Name:" Width="70" VerticalAlignment="Center"/>
-                                            <TextBox Text="{Binding Name}" Width="150" VerticalAlignment="Center"/>
-                                        </StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Color:" Width="70" VerticalAlignment="Center"/>
+                                            <TextBlock Text="Color:" Width="50"/>
                                             <TextBox Text="{Binding Color}" Width="150"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Comment:" Width="70" VerticalAlignment="Center"/>
-                                            <TextBox Text="{Binding Comment}" Width="150" VerticalAlignment="Center"/>
+                                            <TextBlock Text="Comment:" Width="50"/>
+                                            <TextBox Text="{Binding Comment}" Width="150"/>
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Year:" Width="70" VerticalAlignment="Center"/>
+                                            <TextBlock Text="Year:" Width="50"/>
                                             <TextBox Text="{Binding Year}" Width="150"/>
                                         </StackPanel>
-                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                            <TextBlock Text="Price:" Width="70" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="Price:" Width="50"/>
                                             <TextBox Text="{Binding Price}" Width="150"/>
                                         </StackPanel>
                                     </StackPanel>
@@ -112,14 +110,15 @@
                 </ListView>
 
                 <HyperlinkButton Content="" HorizontalAlignment="Left" Margin="1056,257,0,0" VerticalAlignment="Top"/>
-                <StackPanel HorizontalAlignment="Center" Height="50" Margin="0,10,-0,0" VerticalAlignment="Top" Width="auto" Orientation="Horizontal">
-                    <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name" Margin="10"/>
-                    <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand" Margin="10"/>
-                    <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year" Margin="10"/>
-                    <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color" Margin="10"/>
-                    <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price" Margin="10"/>
-                    <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment" Margin="10"/>
-                    <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name" BorderBrush="Black" SelectionHighlightColor="#FF32BEA6" Margin="10"/>
+                <StackPanel HorizontalAlignment="Left" Height="292" Margin="156,113,0,0" VerticalAlignment="Top" Width="187">
+                    <TextBox Text="{Binding Name, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Name"/>
+                    <TextBox Text="{Binding Brand, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Brand"/>
+                    <TextBox Text="{Binding Year, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Year"/>
+                    <TextBox Text="{Binding Color, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Color"/>
+                    <TextBox Text="{Binding Price, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Price"/>
+                    <TextBox Text="{Binding Comment, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Comment"/>
+                    <TextBox Text="{Binding ImagePath, Mode=TwoWay}" Width="150" Height="30" VerticalAlignment="Center" HorizontalAlignment="Left" PlaceholderText="Image Name" BorderBrush="Black" SelectionHighlightColor="#FF32BEA6"/>
+                    <Button x:Name="AddCarButton" Content="Add Car" Command="{Binding AddCar}" Width="150" Background="#32BEA6" BorderBrush="#FF32BEA6" BorderThickness="2,0,2,2" Foreground="Black"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Left" Height="112" Margin="936,247,0,0" VerticalAlignment="Top" Width="104">
 
@@ -128,7 +127,7 @@
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
                     <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
-                    <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100" Background="#32BEA6" BorderBrush="Transparent"/>
+                    <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100" Background="#32BEA6"/>
                 </StackPanel>
             </Grid>
         </SplitView>
