--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -10,6 +10,17 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <StackPanel Orientation = "Horizontal" VerticalAlignment="Bottom" Margin="50,0,0,0" Height="40" Width="300" HorizontalAlignment="Left">
+            
+            <!--<AppBarButton Icon = "Like" > <TextBox Text="sadsa"></TextBox></AppBarButton>
+            <AppBarButton Icon = "Dislike" />
+            <AppBarSeparator/>
+            <AppBarButton Icon = "Accept" />--><!--
+            <AppBarButton Icon = "Add" />
+            <AppBarSeparator/>
+            <AppBarButton Icon ="Accept"/>-->
+
+        </StackPanel>
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  IsPaneOpen="False" 
 			CompactPaneLength="50" OpenPaneLength="150">
             <SplitView.DataContext>
@@ -18,13 +29,15 @@
             <!--The pane represents the menu that you want to be able to interact with, and the content represents the main content of your page.-->
             <SplitView.Pane>
                 <StackPanel Background="#32BEA6">
-                    <Button x:Name="HamburgerButton" 
+                    <StackPanel Orientation="Horizontal">
+                        <Button x:Name="HamburgerButton" 
                             FontFamily="Segoe MDL2 Assets" 
                             Content="&#xE700;"
 						    Width="50" 
                             Height="50" 
                             Background="Transparent" 
                             Click="HamburgerButton_Click"/>
+                    </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <Button x:Name="Car" 
 							FontFamily="Segoe MDL2 Assets" 
@@ -58,9 +71,9 @@
                 </StackPanel>
             </SplitView.Pane>
             <Grid>
-            <Grid.DataContext>
-                <ViewModel:RegisterCarViewModel/>
-            </Grid.DataContext>
+                <Grid.DataContext>
+                    <ViewModel:RegisterCarViewModel/>
+                </Grid.DataContext>
                 <ListView x:Name="CarList"
 			Height="600"
 			ItemsSource="{Binding CarCollection}" Margin="395,126,356,-6" SelectedItem="{Binding SelectedCar,Mode=TwoWay}" Header="Cars In Stock" CanDragItems="True" CanReorderItems="True" AllowDrop="True" IsItemClickEnabled="True" IsTabStop="True" >
@@ -127,11 +140,9 @@
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" Height="64" Margin="0,71,367,0" VerticalAlignment="Top" Width="437" Orientation="Horizontal">
                     <TextBox PlaceholderText="Find Car" Width="250" Height="30" VerticalAlignment="Top" HorizontalAlignment="Center" Text="{Binding searchforcar, Mode=TwoWay}"/>
-                    <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="28" Width="100" Background="#32BEA6"/>
+                    <Button x:Name="button1" Content="Search" HorizontalAlignment="Stretch" Command="{Binding searchCar}" VerticalAlignment="Top" Height="32" Width="100" Background="#32BEA6"/>
                 </StackPanel>
             </Grid>
         </SplitView>
-
-
     </Grid>
 </Page>
