--- a/CarDealership/View/BlankPage2.xaml
+++ b/CarDealership/View/BlankPage2.xaml
@@ -1,7 +1,6 @@
 ﻿<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CarDealership.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:CarDealership.ViewModel"
@@ -15,40 +14,54 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid>
+            
 
             <StackPanel>
                 <controls:DataGrid ItemsSource="{Binding CarCollection}" x:Name="CarCollection" 
                    SelectionMode="Multiple" DefaultOrderIndex="1" Width="800" Height="700">
-                <controls:DataGrid.Columns>
-                    <controls:DataGridTextColumn Width="200" Header="ID" 
+                    <controls:DataGrid.Columns>
+                        <controls:DataGridTextColumn Width="200" Header="ID" 
                   Binding="{Binding ID}"/>
-                    <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
+                        <controls:DataGridTextColumn Width="200" Binding="{Binding Brand}" 
                   IsAscendingDefault="False">
-                        <controls:DataGridTextColumn.Header>
-                            <TextBlock Text="Brand" Foreground="Green" />
-                        </controls:DataGridTextColumn.Header>
-                    </controls:DataGridTextColumn>
-                    <controls:DataGridTextColumn Width="200" Header="Name" 
+                            <controls:DataGridTextColumn.Header>
+                                <TextBlock Text="Brand" Foreground="Green" />
+                            </controls:DataGridTextColumn.Header>
+                        </controls:DataGridTextColumn>
+                        <controls:DataGridTextColumn Width="200" Header="Name" 
                   Binding="{Binding Name}" />
-                    <controls:DataGridTextColumn Width="200" Header="Color" 
-                  Binding="{Binding Color}" />
-                </controls:DataGrid.Columns>
-               
-                <controls:DataGrid.ItemDetailsTemplate>
-                    <DataTemplate>
-                        <!--Here u can put the Details if u want-->
-                        <StackPanel Margin="10,10,10,5">
-                            <TextBlock Text="Details: " FontWeight="Bold" />
-                            <TextBlock Text="{Binding Price}" />
-                            <TextBlock Text="{Binding Year}" />
-                            <TextBlock Text="{Binding Comment}"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </controls:DataGrid.ItemDetailsTemplate>
-            </controls:DataGrid>
+                        <controls:DataGridTextColumn Width="200" Header="Color" 
+                  Binding="{Binding Brand}" />
+                    </controls:DataGrid.Columns>
+
+                    <controls:DataGrid.ItemDetailsTemplate>
+                        <DataTemplate>
+                            <!--Here u can put the Details if u want-->
+                            <Grid Margin="10,10,10,5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel HorizontalAlignment="Left" Grid.Column="0">
+                                        <TextBlock Text="Details: " FontWeight="Bold" />
+                                        <TextBlock Text="{Binding Color}" Width="100"/>
+                                        <TextBlock Text="{Binding Year}" Width="100" />
+                                        <TextBlock Text="{Binding Comment}" Width="100"/>
+                                </StackPanel>
+                                <StackPanel HorizontalAlignment="Right" Grid.Column="1">
+                                    <Button Content="Sell"
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="top"/>
+                                    <Button Content="Delete"
+                                            HorizontalAlignment="Right"
+                                            Margin="0,10,0,0"
+                                            VerticalAlignment="Top"/>
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </controls:DataGrid.ItemDetailsTemplate>
+                </controls:DataGrid>
             </StackPanel>
-
-
         </Grid>
-        </Grid>
+    </Grid>
 </Page>
