--- a/CarDealership/View/RegisterCarPage.xaml
+++ b/CarDealership/View/RegisterCarPage.xaml
@@ -31,8 +31,8 @@
             </SplitView.DataContext>
             <!--The pane represents the menu that you want to be able to interact with, and the content represents the main content of your page.-->
             <SplitView.Pane>
-                <StackPanel Background="#32BEA6">
-                    <StackPanel Orientation="Horizontal">
+                <StackPanel Background="Silver">
+                    <StackPanel Orientation="Horizontal" Background="#32BEA6">
                         <Button x:Name="HamburgerButton" 
                             FontFamily="Segoe MDL2 Assets" 
                             Content="&#xE700;"
@@ -124,7 +124,7 @@
                                         </StackPanel>
                                     </StackPanel>
                                     <StackPanel HorizontalAlignment="Right" Grid.Column="1">
-                                        <!--<Button Content="Sell"
+                                        <Button Content="Sell"
                                             HorizontalAlignment="Right"
                                             VerticalAlignment="top"
                                             Command="{Binding CreateInvoiceWithSelectedCar}"/>
@@ -138,7 +138,7 @@
                                             <Button.DataContext>
                                                 <ViewModel:RegisterCarViewModel/>
                                             </Button.DataContext>
-                                        </Button>-->
+                                        </Button>
                                     </StackPanel>
                                 </Grid>
                             </DataTemplate>
